--- a/Portfolio-main/index.html
+++ b/Portfolio-main/index.html
@@ -72,7 +72,7 @@
 
             <div class="portfolio-card">
               <div class="portfolio-text-box">
-                <p class="portfolio-title">Video</p>
+                <p class="portfolio-title">Circle</p>
                 <p class="portfolio-description">
                   circle is a social media app where like-minded people interact with each other through posts & comments.
                 </p>
