--- a/Portfolio-main/circle.html
+++ b/Portfolio-main/circle.html
@@ -170,7 +170,7 @@
               <h2 class="heading-tertiary">Descripion</h2>
               <p class="portfolioDetails-description">
                 About
-                A Website Who Feature and Sell Trending latest Premium Shoes of Top Brands
+                circle is a social media app where like-minded people interact with each other through posts Like comments and save .
               </p>
             </div>
            
