--- a/Portfolio-main/index.html
+++ b/Portfolio-main/index.html
@@ -154,6 +154,15 @@
                   </a>-->
                 </div>
               </div>
+              <div class="footer-link-box">
+                <a class="footer-link" href="https://drive.google.com/file/d/1xfhiXUcMZy3M-tnmvQxsPivDTKbIPbx7/view">
+                  <ion-icon name="logo-github"></ion-icon> Resume
+                </a>
+             <!--   <a class="footer-link" href="">
+                  <ion-icon name="document-outline"></ion-icon> Resume
+                </a>-->
+              </div>
+            </div>
               <div>
                 <h3 class="heading-tertiary">Find me on</h3>
                 <div class="footer-link-box">
